--- a/wedding/templates/wedding/home.html
+++ b/wedding/templates/wedding/home.html
@@ -26,9 +26,9 @@
         {% for photo in featured_photos %}
         <div class="photo-item" data-toggle="modal" data-target="#photoModal{{ photo.id }}">
             {% if photo.image %}
-                {% with thumbnail_url=photo.get_thumbnail_url %}
-                    {% if thumbnail_url %}
-                        <img src="{{ thumbnail_url }}" alt="{{ photo.title }}" loading="lazy"
+                {% with optimized_url=photo.get_optimized_url %}
+                    {% if optimized_url %}
+                        <img src="{{ optimized_url }}" alt="{{ photo.title }}" loading="lazy"
                              onerror="this.onerror=null; this.src='{{ photo.image.url }}';">
                     {% else %}
                         <img src="{{ photo.image.url }}" alt="{{ photo.title }}" loading="lazy"
@@ -95,9 +95,9 @@
         {% for photo in recent_photos %}
         <div class="photo-item" data-toggle="modal" data-target="#recentPhotoModal{{ photo.id }}">
             {% if photo.image %}
-                {% with thumbnail_url=photo.get_thumbnail_url %}
-                    {% if thumbnail_url %}
-                        <img src="{{ thumbnail_url }}" alt="{{ photo.title }}" loading="lazy">
+                {% with optimized_url=photo.get_optimized_url %}
+                    {% if optimized_url %}
+                        <img src="{{ optimized_url }}" alt="{{ photo.title }}" loading="lazy">
                     {% else %}
                         <img src="{{ photo.image.url }}" alt="{{ photo.title }}" loading="lazy">
                     {% endif %}
