--- a/wedding/templates/wedding/includes/photo_grid.html
+++ b/wedding/templates/wedding/includes/photo_grid.html
@@ -2,9 +2,9 @@
     {% for photo in photos %}
     <div class="photo-item" data-toggle="modal" data-target="#photoModal{{ photo.id }}">
         {% if photo.image %}
-            {% with thumbnail_url=photo.get_thumbnail_url %}
-                {% if thumbnail_url %}
-                    <img src="{{ thumbnail_url }}" alt="{{ photo.title }}" loading="lazy"
+            {% with optimized_url=photo.get_optimized_url %}
+                {% if optimized_url %}
+                    <img src="{{ optimized_url }}" alt="{{ photo.title }}" loading="lazy"
                          onerror="this.onerror=null; this.src='{{ photo.image.url }}';">
                 {% else %}
                     <img src="{{ photo.image.url }}" alt="{{ photo.title }}" loading="lazy"
